Bug 741984 - Prevent tiled texture upload from going into an infinite loop. r=Cwiiis